--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,12 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: setting up a cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashfiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
     - name: list the current directory
       run: ls -lah
     - name: what is in the target folder?
